# user-admin

./: Makefile  README.md  meson.build  meson_post_install.sh  ru_lang.patch  tags  user-base_fix.patch
.tx/: config
data/: mate-user-admin.appdata.xml.in  mate-user-admin.desktop.in  meson.build  org.mate.user.admin.policy.in  user-admin.desktop.in
data/face/: meson.build
data/hicolor/: meson.build
data/icon/: meson.build
data/mate-user-admin/: meson.build  nuconfig
debian/: changelog  control  rules
po/: LINGUAS  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  (+79 more)
src/: Makefile  main.c  mate-languages.c  meson.build  tags  user-admin.c  user-admin.h  user-avatar.c  user-avatar.h  user-base.c  user-base.h  user-crop.c  user-crop.h  user-face.c  user-face.h  user-group-window.c  user-group-window.h  user-group.c  user-group.h  user-history.c  user-history.h  user-info.c  user-info.h  user-language.c  user-language.h  user-list.c  user-list.h  user-password.c  user-password.h  user-share.c  user-share.h  user-window.c  user-window.h  user.h
