faces = [
   ['bicycle.jpg'],
   ['Default.png'],
   ['headphones.jpg'],
   ['mountain.jpg'],
   ['tree.jpg'],
   ['calculator.jpg'],
   ['flower2.jpg'],
   ['hummingbird.jpg'],
   ['plane.jpg'],
   ['cat.jpg'],
   ['gamepad.jpg'],
   ['ic.jpg'],
   ['surfer.jpg'],
   ['coffee2.jpg'],
   ['guitar2.jpg'],
   ['tomatoes.jpg']
  ]
foreach face: faces
  install_data(face,
    install_dir : join_paths(get_option('prefix'), 'share', 'mate-user-admin', 'face')
  )
endforeach
